# biopytools

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  admixture_toolkit_integration_guide.md  annovar_integration_guide.md  biohelpers_integration_guide.md  ena_downloader_integration_guide.md  extract_haplotype_modules.py  extract_vcf_filter_modules.py  fastp_integration_guide.md  git_readme.md  gitignore  haplotype_extractor_integration_guide.md  methylation_pipeline_integration_guide.md  plink_integration_guide.md  pyproject.toml  repeat_masker_integration_guide.md  requirements.txt  rnaseq_integration_guide.md  tmp.py  vcf_filter_integration_guide.md  vcf_genotype_extractor_integration_guide.md  vcf_ld_heatmap_integration_guide.md
.github/: README.md
.github/scripts/: cleanup_releases.py
.github/workflows/: publish.yml  python-publish.yml  release.yml
biopytools/: __init__.py  _version.py  remove_emojis.py
biopytools/admixture/: __init__.py  analysis.py  config.py  data_processing.py  main.py  results.py  utils.py
biopytools/admixture 2/: __init__.py  utils.py
biopytools/admixture 3/: analysis.py  config.py  data_processing.py  main.py  results.py
biopytools/agp2table/: __init__.py  config.py  main.py  utils.py
biopytools/aliner/: __init__.py  config.py  main.py  pipeline.py  utils.py
biopytools/allhic/: __init__.py  asmkit.py  config.py  logger.py  main.py  steps.py  utils.py
biopytools/annovar/: README_results_processing.md  __init__.py  annotation.py  config.py  data_processing.py  main.py  results.py  results_processor.py  utils.py
biopytools/assembly2agp/: __init__.py  main.py
biopytools/assembly_qc/: __init__.py  busco_evaluator.py  config.py  lai_evaluator.py  long_read_mapping_evaluator.py  main.py  mapping_evaluator.py  qv_evaluator.py  report_generator.py  utils.py
biopytools/assembly_qv/: __init__.py  config.py  main.py  qv_calculator.py  utils.py
biopytools/assembly_stats/: __init__.py  config.py  main.py  stats_analyzer.py  utils.py
biopytools/atomm/: __init__.py  config.py  convert.py  kinship.py  main.py  model.py  utils.py
biopytools/augustus_multi_rnaseq/: __init__.py  annotation.py  config.py  data_processing.py  main.py  results.py  utils.py
biopytools/augustus_prediction/: __init__.py  config.py  data_processor.py  evaluator.py  main.py  model_trainer.py  predictor.py  results.py  species_manager.py  utils.py
biopytools/bam2fastq/: __init__.py  config.py  converter.py  main.py  utils.py
biopytools/bam_cov/: __init__.py  config.py  main.py  utils.py
biopytools/bam_stats/: __init__.py  alignment_stats.py  batch_processor.py  config.py  core.py  coverage_stats.py  duplicate_stats.py  genome_stats.py  insert_stats.py  main.py  sample_stats.py  sequence_stats.py  utils.py  variation_stats.py
biopytools/bam_view/: __init__.py  calculator.py  config.py  main.py  utils.py
biopytools/bismark/: __init__.py  config.py  core_analysis.py  main.py  results.py  utils.py
biopytools/bismark_pipeline/: __init__.py  config.py  core_analysis.py  main.py  results.py  utils.py
biopytools/blast/: __init__.py  alignment_visualizer.py  config.py  html_alignment.py  html_templates.py  main.py  statistics.py  text_alignment.py  utils.py
biopytools/blast_analysis/: __init__.py  blast_runner.py  (+10 more)
conda_env/: 3d-dna_v.201008.yml  Augustus_v.3.5.0.yml  BUSCO_v.6.0.0.yml  Baidu.yml  BioinfTools.yml  Blast_v.2.16.0.yml  CentroMiner.yml  DeepBSA.yml  DeepTMHMM.yml  EDTA.yml  EDTA_v.2.2.2.yml  EGAPx_v.0.4.0-alpha.yml  Effector_annotation.yml  GAPIT.yml  GATK_v.4.6.2.0.yml  GTDB-Tk_v.2.4.1.yml  Genome_dedup.yml  HiC-Pro_v3.1.0.yml  InterProScan.v.5.75-106.0.yml  JAVA_11.yml  JCVI_v.1.5.6.yml  K-mer.yml  LTR_retriever_v.3.0.4.yml  LinearPangenomeBuilder.yml  Mumemto_v.1.3.0.yml  NLR_Annotation_Pipeline.yml  Orthofinder_v.3.0.1b1.yml  Population_genetics.yml  Python_v.3.13.5.yml  RNA_Seq.yml  RSeQC_v.5.0.4.yml  R_v.4.5.1.yml  RagTag_v2.10..yml  Rqtl.yml  SubPhaser.yml  Syri_v.1.7.1.yml  Tiberius_v.1.1.1.yml  WGCNA_v.1.73.yml  a-liner.yml  adamixture_v.1.0.2.yml  (+166 more)
docs/: admixture.md  agp2table.md  agp_converter.md  aliner.md  allhic.md  annovar.md  assembly2agp.md  assembly_qc.md  assembly_qv.md  assembly_stats.md  atomm.md  bam2fastq.md  bam_coverage_stats.md  bam_stats.md  bam_view.md  bismark.md  blast.md  blast_v2.md  braker.md  braker4ps.md  busco.md  bwa.md  cactus.md  centier.md  chr_rename.md  chr_renamer.md  cim.md  coverage_filter.md  cphasing.md  deepbsa.md  deeploc.md  deeptmhmm.md  dsuit.md  dsuite.md  dual_rnaseq.md  edta.md  egapx-batch.md  egapx_batch.md  eggnog_mapper.md  ena_downloader.md  (+174 more)
scripts/: bump_version.py  parse_gene_info.py  parse_longest_mrna.py  parse_sample_hete.py  parse_sequence_vcf-MacBook4Xiang.py  parse_sequence_vcf.py  parse_vcf_sequence.py  run_admixture.py  run_annovar.py  run_augustus_multi_rnaseq.py  run_augustus_prediction.py  run_ena_downloader.py  run_fastp.py  run_genome_assembly.py  run_haplotype_extractor.py  run_kmer.py  run_kmer_pav.py  run_methylation_pipeline.py  run_minimap2.py  run_plink_gwas.py  run_popgen_analysis.py  run_repeat_masker.py  run_rnaseq.py  run_vcf_extractor.py  run_vcf_filter.py  run_vcf_ld_heatmap.py  run_vcf_njtree.py  run_vcf_pca.py  run_vcf_phylo.py
tests/: test_ bismark_pipeline.py  test_admixture_toolkit.py  test_annovar.py  test_augustus_multi_rnaseq.py  test_augustus_pipeline.py  test_biohelpers.py  test_biopytools.py  test_bismark_pipeline.py  test_bismark_pipelinee.py  test_ena_downloader.py  test_examples.py  test_fastp.py  test_genome_assembly.py  test_haplotype_extractor.py  test_kmer.py  test_kmer_pav.py  test_longest_mrna.py  test_metawrap_pipeline.py  test_methylation_analysis.py  test_methylation_analyzer.py  test_methylation_pipeline.py  test_minimap2.py  test_ncbi_downloader.py  test_pacbio_sv.py  test_plink.py  test_popgen_toolkit.py  test_repeat_masker.py  test_rnaseq.py  test_scripts.py  test_sequence_toolkit.py  test_vcf_filter.py  test_vcf_genotype_extractor.py  test_vcf_ld_heatmap.py  test_vcf_pca.py  test_vcf_phylo.py  test_vcf_stats.py
(+9157 files in other folders)
