[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biopytools"
version = "1.26.0"
description = "Bioinformatics tools package with Python."
authors = [{name = "Xiang LI"}]
requires-python = ">=3.10"

# 这是 install_requires 的新位置
dependencies = [
    "biopython>=1.80",
    "cyvcf2",
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "openpyxl",
    "pandas>=1.5.0",
    "pyfastx>=0.8.4",
    "python-magic>=0.4.27",
    "pyyaml>=6.0",
    "scikit-learn>=1.0.0",
    "seaborn>=0.11.0"
]

# 这是 extras_require 的新位置
[project.optional-dependencies]
dev = [
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
# Gene and sequence analysis tools
parse_gene_info = "biopytools.gff_utils.main:main"
parse_longest_mrna = "biopytools.longest_mrna.main:main"
parse_sequence_vcf = "biopytools.vcf_sequence_toolkit:main"

# VCF processing tools
run_vcf_filter = "biopytools.vcf_filter.main:main"
run_vcf_genotype = "biopytools.vcf_genotype_extractor.main:main"
run_vcf_sample_hete = "biopytools.vcf_stats_sample.main:main"
run_vcf_pca = "biopytools.vcf_pca.main:main"
run_vcf_ld_heatmap = "biopytools.vcf_ld_heatmap.main:main"
run_vcf_njtree = "biopytools.vcf_phylo.main:main"
run_variant_filter = "biopytools.variant_filter.main:main"

# BAM file stat
run_bam_stats = "biopytools.bam_stats.main:main"

# Quality control and preprocessing
run_fastp = "biopytools.fastp.main:main"

# RNA-seq analysis
run_rnaseq = "biopytools.rnaseq.main:main"
run_augustus_multi_rnaseq = "biopytools.augustus_multi_rnaseq.main:main"

# Annotation tools
run_annovar = "biopytools.annovar.main:main"

# Population genetics and GWAS
run_plink_gwas = "biopytools.plink_gwas.main:main"
run_admixture = "biopytools.admixture.main:main"

# K-mer analysis
run_kmer_extractor = "biopytools.kmer_extractor.main:main"
run_kmer_count = "biopytools.kmer_count.main:main"


# Alignment tools
run_minimap2 = "biopytools.minimap2.main:main"

# Genome annotation
run_repeat_masker = "biopytools.repeat_masker.main:main"

# Data download
run_ena_downloader = "biopytools.ena_downloader.main:main"

# Methylation analysis
run_bismark = "biopytools.bismark_pipeline.main:main"

# Metagenomics
run_metawrap_pipeline = "biopytools.metawrap_pipeline.main:main"

# SV identification
run_pacbio_sv = "biopytools.pacbio_sv.main:main"

# Hifiasm
run_hifiasm = "biopytools.hifiasm.main:main"

# plotsr
run_genome_collinearity = "biopytools.genome_collinearity.main:main"

# GTX
run_gtx = "biopytools.gtx.main:main"

# Parabricks
run_parabricks = "biopytools.parabricks.main:main"

# GenomeScope
# run_genomescope = "biopytools.genomescope.main:main"

# KaKs calcaulator
run_kaks_calculator = "biopytools.kakscalc.main:main"

# split and parse fasta id
run_split_fasta_id = "biopytools.split_fasta_id.main:main"

# GTX joint
run_gtx_joint = "biopytools.vcf_joint_genotyping.main:main"

[tool.setuptools.packages.find]
include = ["biopytools*"]